# SleipnirBench

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: Main.cpp
